# s4s-axum

./: .env.example  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml  schema.sql  sqlx-data.json
migrations/: 20220320100828_create_users_and_credentials_table.sql  20220325195849_replace_id_with_uuid.sql  20220515114227_add_salt_column_to_credentials.sql  20230331195721_add_users_table.up.sql  20230408213334_add_orders_table.down.sql  20230408213334_add_orders_table.up.sql
scripts/: init_db.sh
src/: config.rs  dto.rs  error.rs  extractors.rs  health_check.rs  lib.rs  main.rs  models.rs  routes.rs  service.rs  startup.rs  telemetry.rs  user.rs  utils.rs  validators.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/config/: app.rs  env.rs  mod.rs  routes.rs  storage.rs
src/dtos/: auth.rs  user.rs
src/handlers/: db.rs  http.rs
src/handlers/db/: credentials.rs  posts.rs  scores.rs  users.rs
src/handlers/http/: credentials.rs  posts.rs  scores.rs  users.rs
src/models/: credentials.rs  json_response.rs  order.rs  post.rs  score.rs  user.rs
src/routes/: auth.rs  mod.rs  user.rs
src/services/: auth.rs  edit.rs  mod.rs
src/storage/: mod.rs  user.rs
src/user/: auth.rs  login.rs  model.rs  signup.rs
tests/: auth.rs  health_check.rs  signup.rs  user.rs
tests/common/: assert.rs  fake.rs  lazy.rs  mod.rs  request.rs
