[package]
name = "s4s"
version = "0.1.0"
edition = "2021"
authors = ["geekylthyosaur <geekylthyosaur@gmail.com>"]

[dependencies]
axum = { version = "0.6.12", default-features = false, features = ["http1", "tokio", "json", "headers"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
jsonwebtoken = { version = "8.3.0", default-features = false }
once_cell = { version = "1.17.1", default-features = false }
serde = { version = "1.0.159", default-features = false }
serde_json = { version = "1.0.95", default-features = false }
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi"] }
uuid = { version = "1.3.0", default-features = false, features = ["v4", "serde"] }
validator = { version = "0.16.0", default-features = false, features = ["derive"] }
