[package]
name = "s4s"
version = "0.1.0"
edition = "2021"
authors = ["geekylthyosaur <geekylthyosaur@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "s4s"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5.0", default-features = false, features = ["password-hash", "alloc", "std"] }
axum = { version = "0.6.12", default-features = false, features = ["http1", "tokio", "json", "headers"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock", "serde"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
dotenvy = { version = "0.15.7", default-features = false }
jsonwebtoken = { version = "8.3.0", default-features = false }
once_cell = { version = "1.17.1", default-features = false }
serde = { version = "1.0.159", default-features = false }
serde_json = { version = "1.0.95", default-features = false }
sqlx = { version = "0.6.3", default-features = false, features = ["uuid", "runtime-tokio-native-tls", "migrate", "postgres", "chrono", "offline", "macros"] }
thiserror = { version = "1.0.40", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }
tracing-log = { version = "0.1.3", default-features = false, features = ["log-tracer", "std"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["fmt", "ansi"] }
uuid = { version = "1.3.0", default-features = false, features = ["v4", "serde"] }
validator = { version = "0.16.0", default-features = false, features = ["derive"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
fake = { version = "2.5.0", default-features = false }
hyper = { version = "0.14.25", default-features = false }
jsonschema = { version = "0.17.0", default-features = false }
tower = { version = "0.4.13", default-features = false, features = ["util"] }
